# TFM-PROJECT_u200_parallelComputation

./: .gitignore  README.md  TFM-PROJECT_u200_parallelComputation.code-workspace  makefile
cmake/: CMakeLists.txt
cmake/modules/: FindXRT.cmake
config/: configDev.json
config/configTest_cholesky/: configBenchmark_cholesky.json  configTest_cholesky_Opt0_hw.json  configTest_cholesky_Opt0_hw_emu.json  configTest_cholesky_Opt0_sw_emu.json  configTest_cholesky_Opt1_hw.json  configTest_cholesky_Opt1_hw_emu.json  configTest_cholesky_Opt1_sw_emu.json  configTest_cholesky_Opt2_hw.json  configTest_cholesky_Opt2_hw_emu.json  configTest_cholesky_Opt2_sw_emu.json  configTest_cholesky_Opt3_hw.json  configTest_cholesky_Opt3_hw_emu.json  configTest_cholesky_Opt3_sw_emu.json  configTest_cholesky_Opt4_hw.json  configTest_cholesky_Opt4_hw_emu.json  configTest_cholesky_Opt4_sw_emu.json
config/configTest_doitgen/: configBenchmark_doitgen.json  configTest_doitgen_Opt0_hw.json  configTest_doitgen_Opt0_hw_emu.json  configTest_doitgen_Opt0_sw_emu.json  configTest_doitgen_Opt1_hw.json  configTest_doitgen_Opt1_hw_emu.json  configTest_doitgen_Opt1_sw_emu.json  configTest_doitgen_Opt2_hw.json  configTest_doitgen_Opt2_hw_emu.json  configTest_doitgen_Opt2_sw_emu.json  configTest_doitgen_Opt3_hw.json  configTest_doitgen_Opt3_hw_emu.json  configTest_doitgen_Opt3_sw_emu.json  configTest_doitgen_Opt4_hw.json  configTest_doitgen_Opt4_hw_emu.json  configTest_doitgen_Opt4_sw_emu.json
config/configTest_gemm/: configBenchmark_gemm.json  configTest_gemm_Opt0_hw.json  configTest_gemm_Opt0_hw_emu.json  configTest_gemm_Opt0_sw_emu.json  configTest_gemm_Opt1_hw.json  configTest_gemm_Opt1_hw_emu.json  configTest_gemm_Opt1_sw_emu.json  configTest_gemm_Opt2_hw.json  configTest_gemm_Opt2_hw_emu.json  configTest_gemm_Opt2_sw_emu.json  configTest_gemm_Opt3_hw.json  configTest_gemm_Opt3_hw_emu.json  configTest_gemm_Opt3_sw_emu.json  configTest_gemm_Opt4_hw.json  configTest_gemm_Opt4_hw_emu.json  configTest_gemm_Opt4_sw_emu.json
config/configTest_gemmPer/: configBenchmark_gemmPer.json  configTest_gemmPer_Opt0_hw.json  configTest_gemmPer_Opt0_hw_emu.json  configTest_gemmPer_Opt0_sw_emu.json  configTest_gemmPer_Opt1_hw.json  configTest_gemmPer_Opt1_hw_emu.json  configTest_gemmPer_Opt1_sw_emu.json  configTest_gemmPer_Opt2_hw.json  configTest_gemmPer_Opt2_hw_emu.json  configTest_gemmPer_Opt2_sw_emu.json  configTest_gemmPer_Opt3_hw.json  configTest_gemmPer_Opt3_hw_emu.json  configTest_gemmPer_Opt3_sw_emu.json  configTest_gemmPer_Opt4_hw.json  configTest_gemmPer_Opt4_hw_emu.json  configTest_gemmPer_Opt4_sw_emu.json
config/configTest_jacobi2d/: configBenchmark_jacobi2d.json  configTest_jacobi2d_Opt0_hw.json  configTest_jacobi2d_Opt0_hw_emu.json  configTest_jacobi2d_Opt0_sw_emu.json  configTest_jacobi2d_Opt1_hw.json  configTest_jacobi2d_Opt1_hw_emu.json  configTest_jacobi2d_Opt1_sw_emu.json  configTest_jacobi2d_Opt2_hw.json  configTest_jacobi2d_Opt2_hw_emu.json  configTest_jacobi2d_Opt2_sw_emu.json  configTest_jacobi2d_Opt3_hw.json  configTest_jacobi2d_Opt3_hw_emu.json  configTest_jacobi2d_Opt3_sw_emu.json  configTest_jacobi2d_Opt4_hw.json  configTest_jacobi2d_Opt4_hw_emu.json  configTest_jacobi2d_Opt4_sw_emu.json
config/configTest_studyCase1/: configBenchmark_studyCase1.json  configTest_studyCase1_a_hw.json  configTest_studyCase1_a_hw_emu.json  configTest_studyCase1_a_sw_emu.json  configTest_studyCase1_b_hw.json  configTest_studyCase1_b_hw_emu.json  configTest_studyCase1_b_sw_emu.json  configTest_studyCase1_c_hw.json  configTest_studyCase1_c_hw_emu.json  configTest_studyCase1_c_sw_emu.json
config/configTest_studyCase2/: configAllTest_studyCase2_sw_emu.json  configBenchmark_studyCase2.json  configTest_studyCase2_a_hw.json  configTest_studyCase2_a_hw_emu.json  configTest_studyCase2_a_sw_emu.json  configTest_studyCase2_b_hw.json  configTest_studyCase2_b_hw_emu.json  configTest_studyCase2_b_sw_emu.json  configTest_studyCase2_c_hw.json  configTest_studyCase2_c_hw_emu.json  configTest_studyCase2_c_sw_emu.json  configTest_studyCase2_d_hw.json  configTest_studyCase2_d_hw_emu.json  configTest_studyCase2_d_sw_emu.json
config/configTest_studyCase3/: configAllTest_studyCase3_sw_emu.json  configBenchmark_studyCase3.json  configTest_studyCase3_a_hw.json  configTest_studyCase3_a_hw_emu.json  configTest_studyCase3_a_sw_emu.json  configTest_studyCase3_b_hw.json  configTest_studyCase3_b_hw_emu.json  configTest_studyCase3_b_sw_emu.json  configTest_studyCase3_c_hw.json  configTest_studyCase3_c_hw_emu.json  configTest_studyCase3_c_sw_emu.json  configTest_studyCase3_d_hw.json  configTest_studyCase3_d_hw_emu.json  configTest_studyCase3_d_sw_emu.json
config/configTest_vectorAdd/: configAllTest_vectorAdd_sw_emu.json  configBenchmark_vectorAdd.json  configTest_vectorAdd_Opt0_hw.json  configTest_vectorAdd_Opt0_hw_emu.json  configTest_vectorAdd_Opt0_sw_emu.json  configTest_vectorAdd_Opt1_hw.json  configTest_vectorAdd_Opt1_hw_emu.json  configTest_vectorAdd_Opt1_sw_emu.json  configTest_vectorAdd_Opt2_hw.json  configTest_vectorAdd_Opt2_hw_emu.json  configTest_vectorAdd_Opt2_sw_emu.json  configTest_vectorAdd_Opt3_hw.json  configTest_vectorAdd_Opt3_hw_emu.json  configTest_vectorAdd_Opt3_sw_emu.json  configTest_vectorAdd_Opt4_hw.json  configTest_vectorAdd_Opt4_hw_emu.json  configTest_vectorAdd_Opt4_sw_emu.json
python/: generateGaphics_global_performance.py  generateGaphics_global_power.py  generateGaphics_performance.py  generateGaphics_power.py  generateTable_global_performance.py  generateTable_global_power.py  generateTable_performance.py  generateTable_power.py
python/python_studyCases/: generate_global_studyCase1.py  generate_global_studyCase2.py  generate_global_studyCase3.py
scripts/: beforeExecution_hw.sh  beforeExecution_hw_emu.sh  beforeExecution_sw_emu.sh  initEnvirontment.sh
src/: main.cpp
src/configParams/: configParams.hpp
test/results_StudyCase2/: global_studyCase2_PerformanceResults.csv  global_studyCase2_PerformanceResults.csv.tex  global_studyCase2_PerformanceResults_edit.csv  global_studyCase2_PowerResults.csv  logFile.txt  (+16 more)
(+553 files in other folders)
